migdb.qvto/transforms/tests/validator_postgresql/test_err_invalid_04_b_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_04_b_required(out outModel : ERR);


main() {
	var error : Error := _validationError("Schema \"public\" contains constraint with duplicit "+
		"name \"collision_constraint\"", "validator_postgresql.qvto"); 
	_errorLog(OrderedSet{error});	 
}