migdb.qvto/transforms/tests/errors/error_addClass1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_addClass1b(out inoutModel : ERR);

main(){
	var errorMessage : String := "Structure contains entity called Tab";
	_errorLog(OrderedSet{_evolutionError(1, errorMessage, "evolution_app.qvto")});
}